# mcp-wandb-2

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  question.md
.github/workflows/: ci.yml  demo-smoke.yml  docs.yml  release.yml
docs/: auth.md  hosted.md  index.md  quickstart.md  relationship-to-official.md  tools.md
docs/examples/: 01_explore.md  02_compare_runs.md  03_launch_sweep.md
examples/: 01_explore.md  02_compare_runs.md  03_launch_sweep.md
scripts/: bench.py  gen_tools_doc.py
src/: __main__.py  _errors.py  _telemetry.py  auth.py  client.py  importance.py  models.py  plotting.py
src/mcp_wandb/: __init__.py  _cache.py  _cursor.py  _logging.py  _metrics.py  _util.py  cli.py  server.py  settings.py
src/mcp_wandb/tools/: charts.py  discovery.py
src/tools/: __init__.py  actions.py  analysis.py  query.py
tests/: conftest.py  test_actions.py  test_analysis.py  test_auth.py  test_batch_runs.py  test_cache.py  test_cache_health.py  test_cache_health_status.py  test_chart_byte_cap.py  test_charts.py  test_client.py  test_cursor.py  test_demo_path.py  test_detect_regressions.py  test_discovery.py  test_disk_cache.py  test_ergonomic_shortcuts.py  test_ergonomics.py  test_errors.py  test_history_edge_cases.py  test_importance.py  test_logging.py  test_metrics.py  test_plotting.py  test_properties.py  test_query_pagination.py  test_rate_limiter.py  test_recommend_next_sweep.py  test_telemetry.py  test_util.py  test_validation.py
