[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-wandb"
version = "0.15.0"
description = "Analytical MCP companion for Weights & Biases: hyperparam importance, sweep summaries, run-delta analysis, chart rendering, and gated W&B Launch actions."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "mcp-wandb contributors" }]
keywords = ["mcp", "model-context-protocol", "wandb", "weights-and-biases", "ml-experiment-tracking", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.3",
    "wandb>=0.18",
    "pydantic>=2.6",
    "plotly>=5.20",
    "kaleido>=0.2.1,<1.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.1",
    "typer>=0.12",
    "tenacity>=8.2",
    "python-dateutil>=2.9",
    "httpx>=0.27",
    "keyring>=24.0; sys_platform != 'linux'",
]

[project.optional-dependencies]
shap = ["shap>=0.45"]
telemetry = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "vcrpy>=6.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-python-dateutil",
]

[project.scripts]
mcp-wandb = "mcp_wandb.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/mcp-wandb"
Documentation = "https://github.com/your-org/mcp-wandb#readme"
Repository = "https://github.com/your-org/mcp-wandb"
Issues = "https://github.com/your-org/mcp-wandb/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_wandb"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
# The methodology / safety docs intentionally use math characters
# (× for "by", α for the significance level, – for en-dash separators,
# β for direction sign in importance disclosure). They're not
# typographical mistakes; silence the ambiguous-character lints for
# this finite set.
allowed-confusables = ["×", "α", "–", "β"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

# fastmcp ships no type stubs (as of 2026-05). `@mcp.tool` is therefore an
# untyped decorator from mypy's point of view, which under strict mode would
# infect every tool registration in server.py. Relax that single check just
# for server.py; every other module stays under full strict.
[[tool.mypy.overrides]]
module = "mcp_wandb.server"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "live: tests that hit the real W&B API (require WANDB_API_KEY env var)",
]
